[package]
name = "mp3"
version = "0.1.0"
edition = "2024"
description = "MP3 audio type and encoding for the audio pipeline wrapping LAME"
license = "MIT"
keywords = ["mp3", "lame", "audio", "encoding"]
categories = ["multimedia::audio", "encoding"]
repository = "https://github.com/quietscroll/mp3"
readme = "README.md"

[dependencies]
thiserror = "2"
time = { version = "0.3", default-features = true }
pcm = { git = "https://github.com/quietscroll/pcm" }
mp3lame-encoder = { version = "0.2.4", features = ["std"] }
serde = { version = "1", default-features = false, optional = true }
base64 = { version = "0.22", optional = true }
tracing = "0.1"

[features]
serde = ["dep:serde", "dep:base64", "serde/alloc"]

[dev-dependencies]
serde_json = "1"
